[package]
name = "csv-forms-rs"
version = "0.1.0"
authors = ["Bernardo António Borda d'Água <berna.agua@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.7.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.24"